changed auth middleway layer to verify id from firebase. protected create user and get all user endpoint
